tests/solidity-semantic-tests/out/errors/require_error_function_pointer_parameter/C.approval.teal
#pragma version 10
#pragma typetrack false

// /home/argi/AlgorandFoundation/SideProjects/puya-sol/puya-sol/tests/solidity-semantic-tests/tests/errors/require_error_function_pointer_parameter.sol.C.approval_program() -> uint64:
main:
    intcblock 1 32 0
    pushint 4096
    bzero
    dup
    store 5
    store 0
    load 0
    pushbytes 0x0000000000000000000000000000000000000000000000000000000000000080
    replace2 64
    store 0
    txn ApplicationID
    bnz main_after_if_else@2
    intc_0 // 1
    return

main_after_if_else@2:
    txn OnCompletion
    !
    assert
    txn ApplicationID
    assert
    pushbytess 0xc7619fcb 0x2d4970c7 // method "e(uint256)uint256", method "f()void"
    txna ApplicationArgs 0
    match e f
    err


// /home/argi/AlgorandFoundation/SideProjects/puya-sol/puya-sol/tests/solidity-semantic-tests/tests/errors/require_error_function_pointer_parameter.sol.C.e[routing]() -> void:
e:
    txna ApplicationArgs 1
    dup
    len
    dup
    intc_1 // 32
    ==
    assert // invalid number of bytes for arc4.uint256
    txn GroupIndex
    bz e_ternary_false@3
    txn GroupIndex
    intc_0 // 1
    -
    gtxns Amount

e_ternary_merge@4:
    !
    assert // not payable
    dup
    intc_1 // 32
    <=
    assert // overflow
    intc_1 // 32
    bzero
    dig 2
    b|
    pushbytes 0x151f7c75
    swap
    concat
    log
    intc_0 // 1
    return

e_ternary_false@3:
    intc_2 // 0
    b e_ternary_merge@4


// /home/argi/AlgorandFoundation/SideProjects/puya-sol/puya-sol/tests/solidity-semantic-tests/tests/errors/require_error_function_pointer_parameter.sol.C.f[routing]() -> void:
f:
    txn GroupIndex
    bz f_ternary_false@3
    txn GroupIndex
    intc_0 // 1
    -
    gtxns Amount

f_ternary_merge@4:
    !
    assert // not payable
    err // CustomError

f_ternary_false@3:
    intc_2 // 0
    b f_ternary_merge@4
